[package]
name = "hp"
authors = [ "zir <kamo.bavmesa@gmail.com>" ]
version = "1.0.0"
edition = "2021"
description = "HashParse is a simple, fast and zero dependency command line parsing library."
documentation = "https://docs.rs/hp/latest/hp"
readme = "README.md"
repository = "https://github.com/ThyW/hp"
homepage = "https://github.com/ThyW/hp"
keywords = ["command line", "parser", "cli", "argument", "arg", "parse"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "calc"
path = "examples/calc/src/main.rs"
